# vulcan

./: .clangd  .cursorrules  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  flake.nix
.agent/rules/: vulcan.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/hooks/: pre-commit
.github/workflows/: ci.yml  coverage.yml  docs.yml  format.yml
docs/: TODO.md  design_overview.md
docs/examples/: graph_centuries_tt.html  graph_dcm_00.html  graph_dcm_20.html  graph_ecef_to_lla_lat.html  graph_fuel_consumption.html  graph_fuel_rate.html  graph_gravity_gradient.html  graph_ground_station.html  graph_imu_noise.html  graph_j2_gravity.html  graph_j2_potential.html  graph_jd_tt.html  graph_leap_seconds.html  graph_lla_to_ecef_x.html  graph_log_profile.html  graph_lunar_dv_total.html  graph_mission_cost.html  graph_point_mass.html  graph_reentry_heading_rate.html  graph_rodrigues.html  graph_slosh_roll_accel.html  graph_solar_elevation.html  graph_utc_to_tai.html  graph_visibility.html  graph_wind_profile.html
docs/implementation_plans/: phase10_data_io.md  phase11_environmental_utilities.md  phase12_geodetic_utilities.md  phase12_thirdbody_gravity.md  phase12b_hydro.md  phase13_orbital_mechanics.md  phase16_geometry_primitives.md  phase17_propulsion_utilities.md  phase18_transfer_functions.md  phase19_state_estimation.md  phase20_rigid_body_dynamics.md  phase21_extended_dynamics_fidelity.md  phase22_mass_properties.md  phase23_bootstrap_part3_ideas.md  phase23_comprehensive_demos.md  phase24_yaml_infrastructure.md  phase2_atmospheric_models.md  phase2_ussa1976_detailed.md  phase3_coordinate_frames.md  phase3_coordinate_frames_unified.md  phase4_rotations.md  phase5_wind_models.md  phase6_gravity_models.md  phase7_aerodynamic_utilities.md  phase8_sensor_noise_models.md  phase9_time_systems.md  rng_utilities.md  signal_system_analysis.md  unified_error_service.md  verification_report.md  verification_scrub_plan.md  vulcan_bootstrap_guide.md  vulcan_bootstrap_pt2.md
docs/patterns/: janus_usage_guide.md  signal_service.md
docs/user_guides/: aerodynamics.md  atmosphere.md  comprehensive_demos.md  coordinate_systems_walkthrough.md  coordinates.md  data_io.md  dynamics.md  environment.md  estimation.md  geodetic.md  geometry.md  gravity.md  index.md  interpolation.md  mass_properties.md  orbital.md  propulsion.md  rng.md  rotations.md  sensors.md  time.md  time_systems.md  transfer_functions.md  wind.md  yaml_configuration.md
examples/: CMakeLists.txt
examples/aerodynamics/: aerodynamics_demo.cpp
examples/atmosphere/: atmosphere_profile.cpp
examples/comprehensive/: CMakeLists.txt  comprehensive_ascent.cpp  hypersonic_reentry.cpp  lunar_transfer.cpp  slosh_stability.cpp
examples/coordinates/: coordinate_demo.cpp
examples/dynamics/: dynamics_demo.cpp
examples/environment/: environment_demo.cpp
examples/estimation/: estimation_demo.cpp
examples/geodetic/: geodetic_demo.cpp
examples/geometry/: geometry_demo.cpp
examples/gravity/: gravity_demo.cpp
examples/interpolation/: interpolation_demo.cpp
examples/intro/: getting_started.cpp
examples/io/: telemetry_demo.cpp  yaml_config_demo.cpp
examples/mass/: mass_properties_demo.cpp
examples/orbital/: orbital_demo.cpp  orbital_optimization.cpp
examples/propulsion/: propulsion_demo.cpp
examples/rotations/: rotations_demo.cpp
examples/sensors/: sensor_noise_demo.cpp
examples/time/: mission_planning.cpp  time_optimization.cpp
examples/transfer_functions/: transfer_functions_demo.cpp
examples/wind/: wind_optimization.cpp
include/vulcan/: vulcan.hpp
include/vulcan/aerodynamics/: Aerodynamics.hpp
include/vulcan/atmosphere/: ExponentialAtmosphere.hpp  StandardAtmosphere.hpp  US76Atmosphere.hpp  USSA1976.hpp
include/vulcan/coordinates/: BodyFrames.hpp  CoordinateFrame.hpp  EarthModel.hpp  Geodetic.hpp  LocalFrames.hpp  QuaternionUtils.hpp  (+1 more)
reference/: atmos_temp.txt  taos_docs.md  taos_eom.md
scripts/: build.sh  bump_version.sh  ci.sh  clean.sh  coverage.sh  dev.sh  generate_docs.sh  install-hooks.sh  run_example.sh  run_examples.sh  test.sh  verify.sh
tests/: CMakeLists.txt
tests/aerodynamics/: test_aerodynamics.cpp
tests/atmosphere/: test_exponential.cpp  test_standard.cpp
tests/coordinates/: test_benchmarks.cpp  test_frames.cpp  test_geodetic.cpp  test_transforms.cpp
tests/core/: test_constants.cpp  test_symbolic_validation.cpp  test_table_interpolator.cpp  test_units.cpp  test_validation.cpp  test_vulcan_error.cpp
tests/dynamics/: test_guided_5dof.cpp  test_mass_properties.cpp  test_oscillator_1dof.cpp  test_planar_2dof.cpp  test_point_mass.cpp  test_rail_launch.cpp  test_rigid_body.cpp  test_slosh.cpp
tests/environment/: test_eclipse.cpp  test_magnetic_field.cpp  test_solar_position.cpp
tests/estimation/: test_ekf.cpp  test_kalman_filter.cpp  test_ukf.cpp  test_utils.cpp
tests/geodetic/: test_geodetic_utils.cpp
tests/geometry/: test_geometry.cpp
tests/gravity/: test_j2.cpp  test_j2j4.cpp  test_point_mass.cpp  test_spherical_harmonics.cpp
tests/io/: test_csv_export.cpp  test_frame.cpp  test_frame_serializer.cpp  test_hdf5_roundtrip.cpp  test_telemetry_schema.cpp  test_yaml_convert.cpp  test_yaml_env.cpp  test_yaml_file.cpp  test_yaml_node.cpp
tests/orbital/: test_analytical_ephemeris.cpp  test_anomaly_conversions.cpp  test_orbital_quantities.cpp  test_state_conversions.cpp  test_transfer_mechanics.cpp
tests/propulsion/: test_air_breathing.cpp  test_altitude_thrust.cpp  test_electric.cpp  test_rocket.cpp
tests/rng/: test_distributions.cpp  test_rng.cpp
tests/rotations/: test_axis_angle.cpp  test_dcm_utils.cpp  test_euler_sequences.cpp
tests/sensors/: test_allan_variance.cpp  test_bias_instability.cpp  test_gaussian_noise.cpp  test_markov_process.cpp  test_random_walk.cpp
tests/time/: test_time.cpp
tests/transfer_functions/: test_discretize.cpp  test_first_order.cpp  test_nonlinear.cpp  test_second_order.cpp
tests/wind/: test_constant_wind.cpp  test_dryden.cpp  test_von_karman.cpp  test_wind_shear.cpp
(+90 files in other folders)
